NetBSD Problem Report #53538

From gson@gson.org  Sun Aug 19 09:16:55 2018
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 73EC57A1CE
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 19 Aug 2018 09:16:55 +0000 (UTC)
Message-Id: <20180819091649.54B7998A35B@guava.gson.org>
Date: Sun, 19 Aug 2018 12:16:49 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: MIPS install fails with "exec /sbin/init: error 8"
X-Send-Pr-Version: 3.95

>Number:         53538
>Category:       port-mips
>Synopsis:       MIPS install fails with "exec /sbin/init: error 8"
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    simonb
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 19 09:20:00 +0000 2018
>Closed-Date:    Mon Aug 20 07:16:27 +0000 2018
>Last-Modified:  Mon Aug 20 07:17:20 +0000 2018
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date >= 2018.08.08.07.50.12
>Organization:

>Environment:
System: NetBSD
Architecture: mips
Machine: hpcmips
>Description:

Since simonb's commit of src/sys/arch/mips/mips/cpu_exec.c 1.66, the
hpcmips and pmax testbeds are unable to boot the install kernel:

[   3.0855438] root on md0a dumps on md0b
[   3.0855438] root file system type: ffs
[   3.0855438] kern.module.path=/stand/hpcmips/8.99.24/modules
[   3.0898467] exec /sbin/init: error 8
[   3.0898467] init: trying /sbin/oinit
[   3.0898467] exec /sbin/oinit: error 2
[   3.0898467] init: trying /sbin/init.bak
[   3.0898467] exec /sbin/init.bak: error 2
[   3.0898467] init: trying /rescue/init
[   3.0898467] exec /rescue/init: error 2
[   3.0898467] init path (default /sbin/init):

The above was extracted from
http://releng.netbsd.org/b5reports/hpcmips/2018/2018.08.18.03.09.37/install.log

More logs at:
http://releng.netbsd.org/b5reports/hpcmips/commits-2018.08.html#2018.08.08.07.50.12
http://releng.netbsd.org/b5reports/pmax/commits-2018.08.html#2018.08.08.07.50.12

>How-To-Repeat:

Inspect the test reports.

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-mips-maintainer->simonb
Responsible-Changed-By: gson@NetBSD.org
Responsible-Changed-When: Sun, 19 Aug 2018 09:21:10 +0000
Responsible-Changed-Why:
Over to committer.


From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: port-mips-maintainer@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: port-mips/53538: MIPS install fails with "exec /sbin/init: error 8"
Date: Sun, 19 Aug 2018 20:27:09 +1000

 i see the problem.  eg, this chunk:

 +#ifdef DEBUG_EXEC
                 if (old_abi !=3D p->p_md.md_abi)
                         printf("pid %d(%s): ABI set to O32 (e_flags=3D%#x)=
 \n", p->p_pid, p->p_comm, eh->e_flags);
                 break;
 +#endif /* DEBUG_EXEC */

 should not hide the "break;" line.


 .mrg.

State-Changed-From-To: open->feedback
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Sun, 19 Aug 2018 10:34:27 +0000
State-Changed-Why:
i commited what i think is the fix for this.  please let me know how the testbed goes.


From: "matthew green" <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53538 CVS commit: src/sys/arch/mips/mips
Date: Sun, 19 Aug 2018 10:33:49 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Sun Aug 19 10:33:49 UTC 2018

 Modified Files:
 	src/sys/arch/mips/mips: cpu_exec.c

 Log Message:
 fix a bug in the previous change: don't hide the break; behind DEBUG_EXEC.
 should fix PR#53538.  tested on erlite.


 To generate a diff of this commit:
 cvs rdiff -u -r1.66 -r1.67 src/sys/arch/mips/mips/cpu_exec.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Mon, 20 Aug 2018 07:16:27 +0000
State-Changed-Why:
Fixed - thanks mrg.  The tests not completing is an unrelated issue (admins #131638).


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.