fix a bug in the previous change: don't hide the break; behind DEBUG_EXEC. should fix PR#53538.  tested on erlite.